// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`src/errors should extract the status code from the axios response 1`] = `
{
  "code": "Code",
  "columnNumber": undefined,
  "config": {
    "headers": {},
    "url": "https://domain/api-name/api-version?param=foo",
  },
  "description": undefined,
  "fileName": undefined,
  "lineNumber": undefined,
  "message": "api-name (api-version) error: Response code 404",
  "name": "SellingPartnerApiError",
  "number": undefined,
  "stack": Any<String>,
  "status": 404,
}
`;

exports[`src/errors should handle response-less errors 1`] = `
{
  "code": "Code",
  "columnNumber": undefined,
  "config": {
    "headers": {},
    "url": "https://domain/api-name/api-version?param=foo",
  },
  "description": undefined,
  "fileName": undefined,
  "lineNumber": undefined,
  "message": "api-name (api-version) error: No response",
  "name": "SellingPartnerApiError",
  "number": undefined,
  "stack": Any<String>,
  "status": undefined,
}
`;
